--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
-
 {
   "name": "react-native-native-library-toast-gh",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.o",
   "description": "",
   "main": "index.js",
   "scripts": {
