--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-native-library-toast-gh",
   "version": "1.0.0-alpha.0",
-  "description": "",
+  "description": "A test library to use Native Toast for iOS and Android",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,8 +9,8 @@
   "keywords": [
     "react-native"
   ],
-  "author": "",
-  "license": "",
+  "author": "Gourav Saxena",
+  "license": "MIT",
   "peerDependencies": {
     "react-native": "^0.41.2"
   },
