- Added workflow_dispatch 4

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,12 +4,16 @@
 name: build CI
 
 on:
+  push:
+    branches: [ "main", "develop" ]
+  pull_request:
+    branches: [ "main", "develop" ]
   workflow_dispatch:
-    push:
-      branches: [ "main", "develop" ]
-    pull_request:
-      branches: [ "main", "develop" ]
-
+    inputs:
+      release:
+        version:
+        required: true 
+  
 jobs:
   build:
 
