--- a/.github/workflows/create_tag.yml
+++ b/.github/workflows/create_tag.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: build CI
+name: create_tag CI
 
 on:
   workflow_dispatch:
@@ -11,11 +11,11 @@ on:
       type: string
   push:
     branches: [ "main", "develop" ]
-  pull_request:
-    branches: [ "main", "develop" ]
+    tags:
+      - v[0-9]+.[0-9]+.[0-9]+*
   
 jobs:
-  build:
+  create_tag:
 
     runs-on: ubuntu-latest
 
