--- a/.github/workflows/create_tag.yml
+++ b/.github/workflows/create_tag.yml
@@ -1,15 +1,26 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: create_tag CI
 
-on:
+on: 
   workflow_dispatch:
     inputs:
-      description: 'Enter Tag Version'
-      required: true
-      type: string
-  
+      logLevel:
+        description: 'Log level'     
+        required: true
+        default: 'warning' 
+        type: choice
+        options:
+        - info
+        - warning
+        - debug 
+      tags:
+        description: 'Test scenario tags'
+        required: false 
+        type: boolean
+      environment:
+        description: 'Environment to run tests against'
+        type: environment
+        required: true 
+
 jobs:
   create_tag:
 
