--- a/.github/workflows/create_tag.yml
+++ b/.github/workflows/create_tag.yml
@@ -1,26 +1,13 @@
 name: create_tag CI
 
-on: 
+on:
   workflow_dispatch:
     inputs:
-      logLevel:
-        description: 'Log level'     
+      release_tag_version:
+        description: 'Enter Tag Version'
         required: true
-        default: 'warning' 
-        type: choice
-        options:
-        - info
-        - warning
-        - debug 
-      tags:
-        description: 'Test scenario tags'
-        required: false 
-        type: boolean
-      environment:
-        description: 'Environment to run tests against'
-        type: environment
-        required: true 
-
+        type: string
+  
 jobs:
   create_tag:
 
