--- a/.github/workflows/create_tag.yml
+++ b/.github/workflows/create_tag.yml
@@ -16,7 +16,6 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v3
@@ -27,3 +26,16 @@ jobs:
         cache: 'yarn'
     - name: Install package Manager
       run: yarn install
+    - name: Print Tag version
+      run: |
+        echo "Tag Version: $TAG"
+      env: 
+        TAG: ${{ inputs.release_tag_version}}
+    - name: Setup Github Config
+      run: | 
+        git config user.name "Github Actions Bot KLTR"
+        git config user.email "<>"
+    - name: Create tag
+      run: |
+        git tag ${{ inputs.release_tag_version }}
+        git push origin ${{ inputs.release_tag_version }}
