--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,5 +28,14 @@ jobs:
         cache: 'yarn'
     - name: Install package Manager
       run: yarn install
+
+    - name: Setup JDK 11
+      uses: actions/setup-java@v3
+      with: 
+        java-version: '11'
+        distribution: 'temurin'
+        cache: gradle
+    - name: Execture persmission for gradlew
+      run: chmod +x gradlew
     - name: Android native build
       run: ./gradlew -p ../../android build
