--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,4 +36,5 @@ jobs:
         distribution: 'adopt'
         cache: gradle
     - name: Android native build
-      run: ./gradlew -p ../../android build --no-daemon
+      working-directory: ../../android
+      run: ./gradlew build --no-daemon
