--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,5 +40,8 @@ jobs:
         distribution: 'adopt'
         cache: gradle
     - name: Android native build
-      working-directory: ./android
-      run: ./gradlew build --no-daemon
+      #working-directory: ./android
+      #run: ./gradlew build --no-daemon
+      run: pwd
+    - run: ls -al
+      
