--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,10 +40,10 @@ jobs:
         distribution: 'adopt'
         cache: gradle
     - name: Android native build
-      #working-directory: ./android
-      #run: ./gradlew build --no-daemon
-      run: |
-        pwd
-        ls -al
-        cd ./android
+      working-directory: ./android
+      run: ./gradlew build --no-daemon
+      #run: |
+      #  pwd
+      #  ls -al
+      #  cd ./android
       
