--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,10 @@ jobs:
       with: 
         java-version: '11'
         distribution: 'adopt'
-        cache: gradle
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v3
+      with: 
+        arguments: build
     - name: Android native build
       working-directory: ./android
       run: ./gradlew build --no-daemon
