--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,8 +43,7 @@ jobs:
       with: 
         arguments: build
     - name: Android native build
-      working-directory: ./android
-      run: ./gradlew build --no-daemon
+      run: cd android && chmod +x ./gradlew && ./gradlew build --no-daemon
       #run: |
       #  pwd
       #  ls -al
