--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,24 +24,26 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
+    - name: Checkout repo and clone to CI workspace
     - uses: actions/checkout@v3
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
+
     - name: Install package Manager
-      run: yarn install
+      run: yarn install --frozen-lockfile
 
     - name: Setup JDK 11
       uses: actions/setup-java@v3
       with: 
         java-version: '11'
         distribution: 'adopt'
+        cache: gradle
+
     - name: Android native build
       run: cd android && chmod +x ./gradlew && ./gradlew build --no-daemon
-      #run: |
-      #  pwd
-      #  ls -al
-      #  cd ./android
+      
       
